# soma

./: Cargo.toml  README.md  justfile
.zed/: settings.json
crates/soma_app/: Cargo.toml  justfile
crates/soma_app/src/: app.rs  main.rs  util.rs
crates/soma_lib/: .gitignore  Cargo.toml  README.md  justfile
crates/soma_lib/src/: dmg.rs  lib.rs  memory.rs  sm83.rs  sm83_test.rs
soma_app/: Cargo.toml  justfile
soma_app/src/: main.rs
soma_bin/: Cargo.toml
soma_bin/src/: main.rs
soma_lib/: Cargo.toml
soma_lib/src/: dmg.rs  io.rs  lib.rs  sm83.rs  sm83_test.rs
soma_lib/tests/: sm83.rs  sm83_old.rs  sm83_old.txt
src/: gameboy.rs  lib.rs  main.rs
testdata/: hello_world.gb
tests/: sm83.rs  z80.rs
