[package]
name = "soma"
version = "0.0.1"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]

[[bin]]
name = "soma"

[features]
web = []
desktop = []

[dependencies]
clap = "4.6.0"
eframe = "0.34.1"
egui = "0.34.1"
tokio = { version = "1.48.0", features = ["time", "rt"] }

libsoma = { path = "../soma_lib" }
psy = { path = "../../../psy/" }
